@@ -968,7 +968,7 @@ describe Sequel::Model, "typecasting" do
 
   specify "should raise an error if invalid data is used in an integer field" do
     @c.instance_variable_set(:@db_schema, {:x=>{:type=>:integer}})
-    proc{@c.new.x = 'a'}.should raise_error
+    proc{@c.new.x = 'a'}.should raise_error(Sequel::Error::InvalidValue)
   end
 
   specify "should assign value if raise_on_typecast_failure is off and assigning invalid integer" do
@@ -992,7 +992,7 @@ describe Sequel::Model, "typecasting" do
 
   specify "should raise an error if invalid data is used in an float field" do
     @c.instance_variable_set(:@db_schema, {:x=>{:type=>:float}})
-    proc{@c.new.x = 'a'}.should raise_error
+    proc{@c.new.x = 'a'}.should raise_error(Sequel::Error::InvalidValue)
   end
 
   specify "should assign value if raise_on_typecast_failure is off and assigning invalid float" do
@@ -1019,7 +1019,7 @@ describe Sequel::Model, "typecasting" do
 
   specify "should raise an error if invalid data is used in an decimal field" do
     @c.instance_variable_set(:@db_schema, {:x=>{:type=>:decimal}})
-    proc{@c.new.x = Date.today}.should raise_error
+    proc{@c.new.x = Date.today}.should raise_error(Sequel::Error::InvalidValue)
   end
 
   specify "should assign value if raise_on_typecast_failure is off and assigning invalid decimal" do
@@ -1095,8 +1095,8 @@ describe Sequel::Model, "typecasting" do
 
   specify "should raise an error if invalid data is used in a date field" do
     @c.instance_variable_set(:@db_schema, {:x=>{:type=>:date}})
-    proc{@c.new.x = 'a'}.should raise_error
-    proc{@c.new.x = 100}.should raise_error
+    proc{@c.new.x = 'a'}.should raise_error(Sequel::Error::InvalidValue)
+    proc{@c.new.x = 100}.should raise_error(Sequel::Error::InvalidValue)
   end
 
   specify "should assign value if raise_on_typecast_failure is off and assigning invalid date" do
@@ -1122,8 +1122,8 @@ describe Sequel::Model, "typecasting" do
     @c.instance_variable_set(:@db_schema, {:x=>{:type=>:time}})
     proc{@c.new.x = '0000'}.should raise_error
     proc{@c.new.x = 'a'}.should_not raise_error # Valid Time
-    proc{@c.new.x = '2008-10-21'.to_date}.should raise_error
-    proc{@c.new.x = '2008-10-21'.to_datetime}.should raise_error
+    proc{@c.new.x = '2008-10-21'.to_date}.should raise_error(Sequel::Error::InvalidValue)
+    proc{@c.new.x = '2008-10-21'.to_datetime}.should raise_error(Sequel::Error::InvalidValue)
   end
 
   specify "should assign value if raise_on_typecast_failure is off and assigning invalid time" do
@@ -1164,8 +1164,8 @@ describe Sequel::Model, "typecasting" do
     proc{@c.new.x = '0000'}.should raise_error(Sequel::Error::InvalidValue)
     proc{@c.new.x = 'a'}.should_not raise_error # Valid Time
     Sequel.datetime_class = DateTime
-    proc{@c.new.x = '0000'}.should raise_error
-    proc{@c.new.x = 'a'}.should raise_error
+    proc{@c.new.x = '0000'}.should raise_error(Sequel::Error::InvalidValue)
+    proc{@c.new.x = 'a'}.should raise_error(Sequel::Error::InvalidValue)
   end
 
   specify "should assign value if raise_on_typecast_failure is off and assigning invalid datetime" do
